--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </ol>
   </nav>
 </header>
-<main>
+<main>ss
   <figure>
     <img src="images/Beets.jpg" alt="">
 
@@ -53,5 +53,5 @@
       <li>Delicious</li>
     </ul>
   </aside>
-  <footer><small>Source: <a href="#">Wikipedia</a>; Last modified: <time>Aug 30, 2014</time></small></footer>
+  <footer><small>Source: <a href="#">Wikipedia</a>; Last modified: <time>Aug 30, 2014</time> </small></footer>
 </main>
